Fixing spacing in app-nav

--- a/frontend/src/styles/cmps/_app-nav.scss
+++ b/frontend/src/styles/cmps/_app-nav.scss
@@ -7,23 +7,23 @@
     }
 
     a {
-        // color: $text-secondary;
-        // color: $background-primary;
         color: $text-primary;
         font-family: Macan-bold;
         text-decoration: none;
-        padding: rem(7px) rem(15px);
+        // padding: rem(7px) rem(15px);
         transition: all 0.3s ease-in-out;
     }
 
+    li {
+        padding: 0 20px;
+    }
+
     button {
-        padding: em(7px) em(20px);
+        padding: em(7px) em(15px);
         font-family: Macan-Bold;
-        // border-color: $background-primary;
         border-color: $btn-primary;
 
         span {
-            // color: $background-primary;
             color: $btn-primary;
         }
 
@@ -38,7 +38,6 @@
 
             span {
                 color: $background-primary;
-                // color: $btn-primary;
             }
         }
     }
